<resources xmlns:tools="http://schemas.android.com/tools">
	<string name="mode_easy">Normal</string>
	<string name="mode_tag_only">Tag only</string>
	<string name="mode_indoor">Indoor</string>
	<string name="mode_correct">C-Mode</string>
    <string name="mode_address">Address</string>
    <string name="mode_voice">Voice</string>
    <string name="shortcut_safe">Safe</string>
    <string name="transfer_download_current_dialog_title">Caution!</string>
    <string name="transfer_download_current_dialog_message">You have made changes. Do you want to upload instead of discarding them?</string>
    <string name="transfer_download_current_upload">Upload</string>
    <string name="transfer_download_current_download">Discard &amp; download</string>
    <string name="transfer_download_current_back">Back (don\'t do anything)</string>
    <string name="upload_problem_title">Could not upload</string>
    <string name="upload_problem_message">Some of or all the data was not uploaded. Try again later.</string>
    <string name="bad_request_message">The API responded with an error, please save your data and report the issue:\n\n</string>
    <string name="upload_conflict_title">Upload conflict</string>
    <string name="upload_conflict_message_version">Version conflict</string>
    <string name="upload_conflict_message_deleted">%1$s \nhas local version %2$d \nand was deleted on the server</string>
    <string name="upload_conflict_message_referential">Element deleted locally but has references on the server</string>
    <string name="upload_conflict_message_already_deleted">%1$s \nwas already deleted on the server, retrying</string>
    <string name="upload_conflict_message_missing_references">Local element references objects that are deleted on the server</string>
    <string name="maproulette_task_set_apikey">Set MapRoulette API key</string>
    <string name="share_position">Share position</string>
    <string name="tag_menu_reset_address_prediction">Reset address prediction</string>
    <string name="tag_menu_js_console">JS console</string>
    <string name="menu_config">Preferences</string>
    <string name="menu_find">Find place…</string>
    <string name="menu_help">Help</string>
    <string name="menu_camera">Camera</string>
    <string name="menu_gps">GPS/GNSS…</string>
    <string name="menu_gps_show">Show location</string>
    <string name="menu_gps_follow">Follow location</string>
    <string name="menu_gps_goto">Go to current location</string>
    <string name="menu_gps_goto_coordinates">Go to coordinates…</string>
    <string name="menu_gps_start">Start GPX track</string>
    <string name="menu_gps_pause">Pause GPX tracking</string>
    <string name="menu_gps_clear">Clear GPX track and its waypoints</string>
    <string name="menu_gps_upload">Upload GPX track…</string>
    <string name="menu_gps_export">Export GPX track…</string>
    <string name="menu_gps_import">Import GPX track…</string>
    <string name="menu_gps_goto_start">Go to start of GPX track</string>
    <string name="menu_gps_goto_first_waypoint">Go to first waypoint</string>
    <string name="menu_transfer">Transfer…</string>
    <string name="menu_transfer_download_current">Download current view</string>
    <string name="menu_transfer_upload">Upload data to OSM server…</string>
    <string name="menu_transfer_close_changeset">Close current changeset</string>
    <string name="menu_transfer_export">Export changes to OSC file</string>
    <string name="menu_transfer_apply_osc_file">Apply changes from OSC file</string>
    <string name="menu_transfer_read_file">Read from JOSM file…</string>
    <string name="menu_transfer_read_pbf_file">Read from PBF file</string>
    <string name="menu_transfer_save_file">Save to JOSM file…</string>
    <string name="menu_transfer_bugs_download_current">Download tasks for current view</string>
    <string name="menu_transfer_bugs_upload_long">Upload all tasks</string>
    <string name="menu_transfer_bugs_clear_long">Clear tasks</string>
    <string name="menu_transfer_autodownload_long">Auto download tasks</string>
    <string name="menu_transfer_save_notes_all">Save all notes…</string>
    <string name="menu_transfer_save_notes_new_and_changed">Save new and changed notes…</string>
    <string name="menu_voice_commands">Voice commands</string>
    <string name="menu_tools">Tools…</string>
    <string name="menu_tools_add_imagery_from_oam">Add imagery from OAM</string>
    <string name="menu_tools_flush_all_tile_caches">Flush all tile caches</string>
    <string name="menu_tools_update_imagery_configuration">Update configuration from JOSM</string>
    <string name="menu_tools_clear_clipboard">Clear clipboard</string>
    <string name="menu_simple_actions">Simple mode</string>
    <string name="menu_feedback">Provide feedback</string>
    <string name="menu_privacy">Privacy</string>
    <string name="menu_tools_background_align">Align imagery</string>
    <string name="menu_tools_apply_local_offset">Apply stored offset to imagery</string>
    <string name="menu_tools_oauth_reset">Reset authorization</string>
    <string name="menu_tools_oauth_authorisation">Authorize with OAuth…</string>
    <string name="menu_enable_tagfilter">Tag filter</string>
    <string name="menu_enable_presetfilter">Preset filter</string>
    <string name="config_customlayers_title">Custom layers</string>
    <string name="config_customlayers_summary">Manage layers not in the default configuration.</string>
    <string name="config_mapProfile_title">Data style</string>
    <string name="config_mapProfile_summary">Choose the style for the data layer.</string>
    <string name="config_enableKeepScreenOn_title">Keep screen on</string>
    <string name="config_enableKeepScreenOn_summary">Prevent screen from turning off to save power.</string>
    <string name="config_largeDragArea_title">Large node drag area</string>
    <string name="config_largeDragArea_summary">Provide large area for dragging nodes.</string>
    <string name="config_wayNodeDragging_title">Enable way node dragging</string>
    <string name="config_wayNodeDragging_summary">Enables dragging of individual way nodes of a selected way.</string>
    <string name="config_advancedprefs">Advanced preferences</string>
    <string name="config_moreprefs">More settings…</string>
    <string name="config_presetbutton_title">Presets</string>
    <string name="config_presetbutton_summary">Add and enable JOSM compatible presets</string>
    <string name="config_validatorprefs_title">Validator settings</string>
    <string name="config_validatorprefs_summary">Configure the validation rules.</string>
    <string name="config_connectedNodeTolerance_title">Connected node tolerance</string>
    <string name="config_connectedNodeTolerance_summary">If a highway end node is within this distance (in meters) of a highway it should be connected to it</string>
    <string name="config_enabledValidations_title">Enabled validations</string>
    <string name="config_enabledValidations_summary">Enable/disable individual validations</string>
    <string name="config_opening_hours_title">Opening hours templates</string>
    <string name="config_opening_hours_summary">Load, save and delete opening hours templates</string>
    <string name="config_licensebutton_title">Authors and licenses</string>
    <string name="config_debugbutton_title">Debug</string>
    <string name="config_category_view">User interface settings</string>
    <string name="config_poi_keys_title">Nearby POI display</string>
    <string name="config_poi_keys_summary">Set the keys used for the nearby POI display.</string>
    <string name="config_maxAlertDistance_current">%1$d meter(s)</string>
    <string name="config_category_auto_download">Auto-download settings</string>
    <string name="config_extTriggeredDownloadRadius_title">Download radius</string>
    <string name="config_extTriggeredDownloadRadius_summary">Radius (m) of externally triggered downloads, 0 centers only on map.</string>
    <string name="config_downloadRadius_current">%1$d meter(s)</string>
    <string name="config_maxDownloadSpeed_title">Maximum auto-download speed</string>
    <string name="config_maxDownloadSpeed_summary">Limit (in km/h) above which auto-download is suspended.</string>
    <string name="config_downloadSpeed_current">%1$d km/h</string>
    <string name="config_autoPrune_summary">Enable/disable automatically pruning in memory data and tasks</string>
    <string name="config_autoPruneNodeLimit_title">Auto-prune limit</string>
    <string name="config_autoPruneNodeLimit_summary">Number of Nodes in memory that when reached will trigger a prune.</string>
    <string name="config_autoPruneNodeLimit_current">%1$d Nodes</string>
    <string name="config_autoPruneBoundingBoxLimit_title">Auto-prune Bounding Boxes limit</string>
    <string name="config_autoPruneBoundingBoxLimit_summary">Number of Bounding Boxes in memory that when reached will trigger a prune.</string>
    <string name="config_autoPruneBoundingBoxLimit_current">%1$d Boxes</string>
    <string name="config_panAndZoomLimit_title">Zoom limit</string>
    <string name="config_panAndZoomLimit_summary">Minimum zoom level for pan and zoom auto-download.</string>
    <string name="config_panAndZoomLimit_current">%1$d</string>
    <string name="config_bugDownloadRadius_title">Task download radius</string>
    <string name="config_bugDownloadRadius_summary">Radius (m) of task downloads.</string>
    <string name="config_maxBugDownloadSpeed_title">Maximum task auto-download speed</string>
    <string name="config_maxBugDownloadSpeed_summary">Limit (in km/h) above which notes, bugs and task auto-download is suspended.</string>
    <string name="config_autoPruneTaskLimit_title">Task auto-prune limit</string>
    <string name="config_autoPruneTaskLimit_summary">Number of tasks in memory that when reached will trigger a prune.</string>
    <string name="config_autoPruneTaskLimit_current">%1$d Tasks</string>
    <string name="config_category_gps">Location settings</string>
    <string name="config_gps_source_title">GPS/GNSS source</string>
    <string name="config_gps_source_summary">Source of GPS/GNSS location updates.</string>
    <string name="config_gps_source_tcp_title">NMEA network source</string>
    <string name="config_gps_source_tcp_summary">Address of TCP NMEA source as host:port.</string>
    <string name="config_gps_interval_title">Minimum GPS/GNSS interval</string>
    <string name="config_gps_interval_summary">The minimum time interval for GPS/GNSS location notifications, in milliseconds. Lower values drain more battery.</string>
    <string name="config_gps_interval_current">%1$d ms</string>
    <string name="config_gps_distance_title">Minimum GPS/GNSS-distance</string>
    <string name="config_gps_distance_summary">The minimum distance between for GPS/GNSS notifications, in meters. Lower values drain more battery.</string>
    <string name="config_gps_distance_current">%1$d meter(s)</string>
    <string name="config_leaveGpsDisabled_title">Leave GPS/GNSS turned off</string>
    <string name="config_leaveGpsDisabled_summary">Don\'t ask to turn GPS/GNSS on if off.</string>
    <string name="config_gps_network_title">Fallback to network location</string>
    <string name="config_gps_network_summary">If no GPS/GNSS positioning is present or turned on, fall back to network provider.</string>
    <string name="config_gnssTimeToStale_title">Stale location after</string>
    <string name="config_gnssTimeToStale_summary">The age (in seconds) that a location needs to have to be considered stale.</string>
    <string name="config_gnssTimeToStale_current">%1$d s</string>
    <string name="config_useBarometricHeight_title">Use barometric height</string>
    <string name="config_useBarometricHeight_summary">Use height values in tracks from the air pressure sensor if available</string>
    <string name="undo">Undo</string>
</resources>