<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/menu_config">
    <PreferenceCategory
        android:key="config_category_view"
        android:title="@string/config_category_view">
        <androidx.preference.Preference
            android:key="@string/config_mapProfile_key"
            android:title="@string/config_mapProfile_title"
            android:summary="@string/config_mapProfile_summary"
            android:defaultValue="Color Round Nodes" />
        <androidx.preference.Preference
            android:title="@string/config_customlayers_title"
            android:key="@string/config_customlayers_key"
            android:summary="@string/config_customlayers_summary" />
        <androidx.preference.CheckBoxPreference
            android:title="@string/config_enableKeepScreenOn_title"
            android:key="@string/config_enableKeepScreenOn_key"
            android:summary="@string/config_enableKeepScreenOn_summary"
            android:defaultValue="false" />
        <androidx.preference.CheckBoxPreference
            android:key="@string/config_largeDragArea_key"
            android:title="@string/config_largeDragArea_title"
            android:summary="@string/config_largeDragArea_summary"
            android:defaultValue="false" />
       <androidx.preference.CheckBoxPreference
            android:key="@string/config_wayNodeDragging_key"
            android:title="@string/config_wayNodeDragging_title"
            android:summary="@string/config_wayNodeDragging_summary"
            android:defaultValue="false" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="config_moreprefs"
        android:title="@string/config_moreprefs">
        <androidx.preference.Preference
            android:key="@string/config_presetbutton_key"
            android:summary="@string/config_presetbutton_summary"
            android:title="@string/config_presetbutton_title" />
        <androidx.preference.Preference
            android:title="@string/config_validatorprefs_title"
            android:key="config_category_validator"
            android:fragment="de.blau.android.prefs.ValidatorPrefEditorFragment" />
        <androidx.preference.Preference
            android:title="@string/config_opening_hours_title"
            android:key="@string/config_opening_hours_key"
            android:summary="@string/config_opening_hours_summary" />
        <androidx.preference.MultiSelectListPreference
            android:key="@string/config_poi_keys_key"
            android:title="@string/config_poi_keys_title"
            android:summary="@string/config_poi_keys_summary"
            android:entries="@array/poi_keys_entries"
            android:entryValues="@array/poi_keys_values"
            android:defaultValue="@array/poi_keys_defaults" />
        <androidx.preference.Preference
            android:icon="?attr/menu_config"
            android:title="@string/config_advancedprefs"
            android:key="@string/config_advancedprefs_key" />
    </PreferenceCategory>
</PreferenceScreen>