<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_undo"
        android:title="@string/undo"
        android:alphabeticShortcut="@string/shortcut_undo"
        android:icon="?attr/menu_undo"
        app:actionLayout="@layout/undo_action_view" />
    <item
        android:id="@+id/menu_camera"
        android:title="@string/menu_camera"
        android:icon="?attr/menu_camera"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_voice"
        android:title="@string/menu_voice_commands"
        android:icon="?attr/mic"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_gps"
        android:title="@string/menu_gps"
        android:icon="?attr/menu_gps"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/menu_gps_show"
                android:title="@string/menu_gps_show"
                android:checkable="true" />
            <item
                android:id="@+id/menu_gps_follow"
                android:title="@string/menu_gps_follow"
                android:checkable="true"
                android:alphabeticShortcut="@string/shortcut_gps_follow" />
            <item
                android:id="@+id/menu_gps_goto"
                android:title="@string/menu_gps_goto"
                android:alphabeticShortcut="@string/shortcut_gps_goto" />
            <item
                android:id="@+id/menu_gps_goto_coordinates"
                android:title="@string/menu_gps_goto_coordinates" />
            <item
                android:id="@+id/menu_gps_start"
                android:title="@string/menu_gps_start" />
            <item
                android:id="@+id/menu_gps_pause"
                android:title="@string/menu_gps_pause" />
            <item
                android:id="@+id/menu_gps_clear"
                android:title="@string/menu_gps_clear" />
            <item
                android:id="@+id/menu_gps_upload"
                android:title="@string/menu_gps_upload" />
            <item
                android:id="@+id/menu_gps_export"
                android:title="@string/menu_gps_export" />
            <item
                android:id="@+id/menu_gps_import"
                android:title="@string/menu_gps_import" />
            <item
                android:id="@+id/menu_gps_goto_start"
                android:title="@string/menu_gps_goto_start" />
            <item
                android:id="@+id/menu_gps_goto_first_waypoint"
                android:title="@string/menu_gps_goto_first_waypoint" />
        </menu>
    </item>
    <item
        android:id="@+id/menu_transfer"
        android:title="@string/menu_transfer"
        android:icon="?attr/menu_transfer"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/menu_transfer_download_current"
                android:title="@string/menu_transfer_download_current" />
            <item
                android:id="@+id/menu_transfer_download_current_add"
                android:title="@string/menu_transfer_download_current_add"
                android:alphabeticShortcut="@string/shortcut_download" />
            <item
                android:id="@+id/menu_transfer_download_other"
                android:title="@string/menu_transfer_download_other" />
            <item
                android:id="@+id/menu_transfer_upload"
                android:title="@string/menu_transfer_upload" />
            <item
                android:id="@+id/menu_gps_autodownload"
                android:title="@string/menu_gps_autodownload"
                android:checkable="true" />
            <item
                android:id="@+id/menu_transfer_close_changeset"
                android:title="@string/menu_transfer_close_changeset" />
            <item
                android:id="@+id/menu_transfer_export"
                android:title="@string/menu_transfer_export" />
            <item
                android:id="@+id/menu_transfer_apply_osc_file"
                android:title="@string/menu_transfer_apply_osc_file" />
            <item
                android:id="@+id/menu_transfer_read_file"
                android:title="@string/menu_transfer_read_file" />
            <item
                android:id="@+id/menu_transfer_read_pbf_file"
                android:title="@string/menu_transfer_read_pbf_file" />
            <item
                android:id="@+id/menu_transfer_save_file"
                android:title="@string/menu_transfer_save_file" />
            <item
                android:id="@+id/menu_transfer_bugs_download_current"
                android:title="@string/menu_transfer_bugs_download_current"
                android:alphabeticShortcut="@string/shortcut_bugs_download" />
            <item
                android:id="@+id/menu_transfer_bugs_upload"
                android:title="@string/menu_transfer_bugs_upload_long" />
            <item
                android:id="@+id/menu_transfer_bugs_clear"
                android:title="@string/menu_transfer_bugs_clear_long" />
            <item
                android:id="@+id/menu_transfer_bugs_autodownload"
                android:title="@string/menu_transfer_autodownload_long"
                android:checkable="true" />
            <item
                android:id="@+id/menu_transfer_save_notes_all"
                android:title="@string/menu_transfer_save_notes_all" />
            <item
                android:id="@+id/menu_transfer_save_notes_new_and_changed"
                android:title="@string/menu_transfer_save_notes_new_and_changed" />
            <item
                android:id="@+id/menu_transfer_read_custom_bugs"
                android:title="@string/menu_transfer_read_custom_bugs" />
            <item
                android:id="@+id/menu_transfer_write_custom_bugs"
                android:title="@string/menu_transfer_write_custom_bugs" />
        </menu>
    </item>
    <item
        android:id="@+id/menu_config"
        android:title="@string/menu_config"
        android:icon="?attr/menu_config"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_tools"
        android:title="@string/menu_tools"
        android:icon="?attr/menu_tools"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/menu_tools_flush_all_tile_caches"
                android:title="@string/menu_tools_flush_all_tile_caches" />
            <item
                android:id="@+id/menu_tools_background_align"
                android:title="@string/menu_tools_background_align" />
            <item
                android:id="@+id/menu_tools_apply_local_offset"
                android:title="@string/menu_tools_apply_local_offset" />
            <item
                android:id="@+id/menu_tools_add_imagery_from_oam"
                android:title="@string/menu_tools_add_imagery_from_oam" />
            <item
                android:id="@+id/menu_tools_update_imagery_configuration"
                android:title="@string/menu_tools_update_imagery_configuration" />
            <item
                android:id="@+id/tag_menu_reset_address_prediction"
                app:showAsAction="never"
                android:title="@string/tag_menu_reset_address_prediction" />
            <item
                android:id="@+id/menu_tools_oauth_reset"
                android:title="@string/menu_tools_oauth_reset" />
            <item
                android:id="@+id/menu_tools_oauth_authorisation"
                android:title="@string/menu_tools_oauth_authorisation" />
            <item
                android:id="@+id/menu_tools_set_maproulette_apikey"
                android:title="@string/maproulette_task_set_apikey" />
            <item
                android:id="@+id/menu_tools_clear_clipboard"
                android:title="@string/menu_tools_clear_clipboard" />
            <item
                android:id="@+id/tag_menu_js_console"
                android:title="@string/tag_menu_js_console"
                app:showAsAction="never" />
        </menu>
    </item>
    <item
        android:id="@+id/menu_find"
        android:title="@string/menu_find"
        android:icon="?attr/menu_find"
        app:showAsAction="ifRoom" />
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_enable_tagfilter"
            android:checkable="true"
            android:title="@string/menu_enable_tagfilter" />
        <item
            android:id="@+id/menu_enable_presetfilter"
            android:checkable="true"
            android:title="@string/menu_enable_presetfilter" />
    </group>
    <item
        android:id="@+id/menu_share"
        android:title="@string/share_position"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_help"
        android:title="@string/menu_help"
        android:alphabeticShortcut="@string/shortcut_help"
        android:icon="?attr/menu_help"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_simple_actions"
        android:checkable="true"
        android:title="@string/menu_simple_actions"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_authors"
        android:title="@string/config_licensebutton_title"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_feedback"
        android:title="@string/menu_feedback"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_privacy"
        android:title="@string/menu_privacy"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_debug"
        android:title="@string/config_debugbutton_title"
        app:showAsAction="never" />
</menu>