<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="@string/config_category_gps">
    <androidx.preference.ListPreference
        android:defaultValue="internal"
        android:entries="@array/gps_source"
        android:entryValues="@array/gps_source_keys"
        android:key="@string/config_gps_source_key"
        android:summary="@string/config_gps_source_summary"
        android:title="@string/config_gps_source_title" />
    <androidx.preference.EditTextPreference
        android:defaultValue="127.0.0.1:1958"
        android:dialogTitle="@string/config_gps_source_tcp_title"
        android:key="@string/config_gps_source_tcp_key"
        android:summary="@string/config_gps_source_tcp_summary"
        android:dialogMessage="@string/config_gps_source_tcp_summary"
        android:title="@string/config_gps_source_tcp_title" />
    <ch.poole.android.numberpickerpreference.NumberPickerPreference
        android:defaultValue="1000"
        android:dialogTitle="@string/config_gps_interval_title"
        android:key="@string/config_gps_interval_key"
        android:numeric="integer"
        android:summary="@string/config_gps_interval_summary"
        android:title="@string/config_gps_interval_title"
        app:spt_maxValue="30000" app:spt_minValue="0"
        app:spt_increment="200"
        app:spt_currentValueText="@string/config_gps_interval_current"
        app:spt_setWrapSelectorWheel="false" />
    <ch.poole.android.numberpickerpreference.NumberPickerPreference
        android:defaultValue="2"
        android:dialogTitle="@string/config_gps_distance_title"
        android:key="@string/config_gps_distance_key"
        android:numeric="integer"
        android:summary="@string/config_gps_distance_summary"
        android:title="@string/config_gps_distance_title"
        app:spt_maxValue="50" app:spt_minValue="0"
        app:spt_currentValueText="@string/config_gps_distance_current"
        app:spt_setWrapSelectorWheel="false" />
    <androidx.preference.CheckBoxPreference
        android:defaultValue="false"
        android:key="@string/config_leaveGpsDisabled_key"
        android:summary="@string/config_leaveGpsDisabled_summary"
        android:title="@string/config_leaveGpsDisabled_title" />
    <androidx.preference.CheckBoxPreference
        android:defaultValue="false"
        android:key="@string/config_gps_network_key"
        android:summary="@string/config_gps_network_summary"
        android:title="@string/config_gps_network_title" />
    <ch.poole.android.numberpickerpreference.NumberPickerPreference
        android:defaultValue="60"
        android:dialogTitle="@string/config_gnssTimeToStale_title"
        android:key="@string/config_gnssTimeToStale_key"
        android:numeric="integer"
        android:summary="@string/config_gnssTimeToStale_summary"
        android:title="@string/config_gnssTimeToStale_title"
        app:spt_minValue="1"
        app:spt_currentValueText="@string/config_gnssTimeToStale_current"
        app:spt_setWrapSelectorWheel="false" />
    <androidx.preference.CheckBoxPreference
        android:defaultValue="false"
        android:key="@string/config_useBarometricHeight_key"
        android:summary="@string/config_useBarometricHeight_summary"
        android:title="@string/config_useBarometricHeight_title" />
</PreferenceScreen>
